--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.6'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     // Testing
